sfdx/nibs-sfdx/main/default/objects/Campaign/fields/campaignPage__c.field-meta.xml
<CustomField>
    <fullName>campaignPage__c</fullName>
    <label>Campaign Page</label>
    <type>Url</type>
</CustomField>