sfdx/nibs-sfdx/main/default/objects/Campaign/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <label>Campaign Image</label>
    <type>Url</type>
</CustomField>