sfdx/nibs-sfdx/main/default/objects/Campaign/fields/pic__c.field-meta.xml
<CustomField>
    <fullName>pic__c</fullName>
    <formula>IMAGE(image__c, &#39;Image&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>