sfdx/nibs-sfdx/main/default/objects/Campaign/fields/Stock_Image__c.field-meta.xml
<CustomField>
    <fullName>Stock_Image__c</fullName>
    <label>Stock Image</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milk</fullName>
            </value>
            <value>
                <fullName>Nuts</fullName>
            </value>
            <value>
                <fullName>Truffles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>